feat(i18n): translate faq answers
[v2.1.2]

--- a/config/i18n/de.json5
+++ b/config/i18n/de.json5
@@ -234,5 +234,68 @@
   "Why are some items hidden in 'Excluded Categories'?": "Warum sind einige Objekte in 'Ausgeschlossene Kategorien' versteckt?",
   "Why are weapons hidden by default?": "Warum sind Waffen standardmaessig versteckt?",
   "Why can't I use certain items in the ritual?": "Warum kann ich bestimmte Objekte nicht im Ritual verwenden?",
-  "Why do some weapons have such high Base Values?": "Warum haben einige Waffen so hohe Basiswerte?"
+  "Why do some weapons have such high Base Values?": "Warum haben einige Waffen so hohe Basiswerte?",
+  "1. Set Threshold": "1. Schwelle setzen",
+  "2. Select Items": "2. Gegenstaende waehlen",
+  "3. Check Settings": "3. Einstellungen pruefen",
+  "4. Auto Select": "4. Automatisch auswaehlen",
+  "Select your target value (e.g., 400,000₽ for 6h ritual).": "Waehle deinen Zielwert (z.B. 400.000₽ fuer ein 6h-Ritual).",
+  "Search and add items to the 5 ritual slots.": "Suche und fuege Gegenstaende zu den 5 Ritualplaetzen hinzu.",
+  "Configure excluded categories and price preferences.": "Ausgeschlossene Kategorien und Preisvorlieben konfigurieren.",
+  "Let the app find the most cost-effective combination.": "Lass die App die kosteneffektivste Kombination finden.",
+  "★ Key Feature: Pinning": "★ Schluesselfunktion: Anheften",
+  "Click the Pin icon on an item to force the Auto Select feature to include it in the final calculation. Great for items you already have in your stash!": "Klicke auf das Pin-Symbol, um die Automatik-Auswahl zu zwingen, den Gegenstand in die Endberechnung aufzunehmen. Ideal fuer Gegenstaende, die du bereits im Versteck hast!",
+  "Smart suggestions appear below empty slots with color-coded hints. They guide you toward items that will help you reach your current threshold efficiently.": "Intelligente Vorschlaege erscheinen unter leeren Slots mit farbigen Hinweisen. Sie fuehren dich zu Gegenstaenden, die dir helfen, den aktuellen Schwellenwert effizient zu erreichen.",
+  "Ritual duration determines the quality and type of rewards you receive:": "Die Ritualdauer bestimmt die Qualitaet und Art der Belohnungen:",
+  "12 Hours:": "12 Stunden:",
+  "Normal random loot. Triggered by sacrifices under 350,001₽.": "Normale Zufallsbeute. Ausgeloest durch Opfer unter 350.001₽.",
+  "14 Hours:": "14 Stunden:",
+  "High-value loot. Triggered by sacrifices between 350,001₽ and 399,999₽.": "Hochwertige Beute. Ausgeloest durch Opfer zwischen 350.001₽ und 399.999₽.",
+  "6 Hours:": "6 Stunden:",
+  "Quest & Hideout items. This is the most desirable outcome.": "Quest- und Versteck-Items. Dies ist das begehrteste Ergebnis.",
+  "To have a chance at a 6-hour ritual, your total sacrifice must be": "Um eine Chance auf ein 6-Stunden-Ritual zu haben, muss dein gesamtes Opfer",
+  "400,000₽ or more": "400.000₽ oder mehr",
+  "Note: At 400k+, you have a": "Hinweis: Ab 400k+ hast du",
+  "25% chance": "25 % Chance",
+  "for a 6h ritual and a": "auf ein 6h-Ritual und",
+  "75% chance": "75 % Chance",
+  "for a 14h ritual. Adding more value beyond 400k does NOT increase this 25% chance.": "auf ein 14h-Ritual. Mehr Wert ueber 400k erhoeht diese 25%-Chance NICHT.",
+  "The Cultist Circle uses an internal \"base value\" for items, which is different from flea or trader prices.": "Der Cultist Circle verwendet einen internen \"Basiswert\" fuer Gegenstaende, der sich von Flohmarkt- oder Haendlerpreisen unterscheidet.",
+  "Base Value = Vendor Sell Price ÷ Vendor's Multiplier": "Basiswert = Haendler-Verkaufspreis ÷ Haendler-Multiplikator",
+  "Example: A Graphics Card sells to Therapist for 124,740₽. Her multiplier is 0.63. Base Value = 124,740 ÷ 0.63 = 198,682₽.": "Beispiel: Eine Grafikkarte verkauft sich bei der Therapeutin fuer 124.740₽. Ihr Multiplikator ist 0,63. Basiswert = 124.740 ÷ 0,63 = 198.682₽.",
+  "Weapon base values are tied to their trader sell prices. Rare or high-tier weapons like the": "Waffen-Basiswerte sind an Haendlerverkaufspreise gebunden. Seltene oder hochwertige Waffen wie die",
+  "HK G28": "HK G28",
+  "have very high sell values, making them extremely efficient for reaching the 400k threshold.": "haben sehr hohe Verkaufspreise und sind daher extrem effizient, um die 400k-Schwelle zu erreichen.",
+  "However, many weapon \"mods\" or attachments have low base values, and the calculation for full weapon builds can be uncertain due to durability and the number of attached parts.": "Allerdings haben viele Waffen-\"Mods\" oder Aufsaetze niedrige Basiswerte, und die Berechnung ganzer Waffenbuilds kann aufgrund der Haltbarkeit und Anzahl der Teile unsicher sein.",
+  "In the Settings menu, you can toggle which categories of items you are willing to sacrifice. If a category is unchecked, any items belonging to it will be hidden from the calculator and auto-select feature to prevent unintentional sacrifices of gear you'd rather keep.": "Im Einstellungen-Menue kannst du auswaehlen, welche Kategorien du opfern moechtest. Wenn eine Kategorie deaktiviert ist, werden zugehoerige Gegenstaende im Rechner und der Automatik-Auswahl verborgen, um unbeabsichtigte Opfer zu vermeiden.",
+  "Some items are hard-coded as": "Einige Gegenstaende sind fest als",
+  "Incompatible": "Inkompatibel",
+  "(see the Incompatible Items tab).": "(siehe Tab Inkompatible Objekte).",
+  "The Weapon category is disabled by default for two main reasons:": "Die Waffen-Kategorie ist standardmaessig aus zwei Gruenden deaktiviert:",
+  "Base Value Uncertainty:": "Unsicherheit des Basiswerts:",
+  "Weapon base values are complex and can vary based on durability and the specific combination of attached parts/mods.": "Waffen-Basiswerte sind komplex und koennen je nach Haltbarkeit und Kombination der Teile variieren.",
+  "You can enable weapons in": "Du kannst Waffen aktivieren unter",
+  "Settings > Categories": "Einstellungen > Kategorien",
+  "if you have spares you're willing to sacrifice.": "wenn du Ersatz hast, den du opfern willst.",
+  "Certain high-value items can be sacrificed but will": "Bestimmte hochwertige Gegenstaende koennen geopfert werden, werden aber",
+  "never be returned": "nie zurueckgegeben",
+  "as a reward from a 6h ritual. This prevents \"infinite loops\" of extremely rare items.": "als Belohnung eines 6h-Rituals. Dies verhindert \"Endlosschleifen\" extrem seltener Gegenstaende.",
+  "Note: \"High Value\" in Tarkov is a broad term. It can refer to rare items like a": "Hinweis: \"Hoher Wert\" in Tarkov ist ein weiter Begriff. Er kann sich auf seltene Gegenstaende wie",
+  "LedX": "LedX",
+  "are community-tested weapon combos that use special internal base values to hit the 400k threshold cheaply.": "sind von der Community getestete Waffen-Kombos, die spezielle Basiswerte nutzen, um die 400k-Schwelle guenstig zu erreichen.",
+  "You'll find them in the": "Du findest sie im",
+  "panel on the main calculator page. Click": "Panel auf der Hauptseite des Rechners. Klicke",
+  "to auto-fill the slots.": "um die Slots automatisch zu fuellen.",
+  "The": "Die",
+  "page is a dedicated view showing all known weapon combos and their expected ritual outcomes.": "Seite ist eine spezielle Ansicht mit allen bekannten Waffen-Kombos und ihren erwarteten Ritualergebnissen.",
+  "Note: Some recipes may only work once per profile or have specific conditions.": "Hinweis: Manche Rezepte funktionieren nur einmal pro Profil oder unter bestimmten Bedingungen.",
+  "Exact Thresholds:": "Genaue Schwellenwerte:",
+  "Aim for just over 400,001₽. Adding more value does NOT increase your 6h ritual chance.": "Ziele knapp ueber 400.001₽. Mehr Wert erhoeht die 6h-Ritualchance NICHT.",
+  "Check Your Quests:": "Pruefe deine Quests:",
+  "For best results with the 6h ritual, ensure you have active quests on your character.": "Fuer beste Ergebnisse mit dem 6h-Ritual stelle sicher, dass du aktive Quests hast.",
+  "Stable Prices:": "Stabile Preise:",
+  "Red pricing": "Rote Preise",
+  "indicates unstable market data. Always verify these items in-game.": "zeigt instabile Marktdaten. Ueberpruefe diese Items immer im Spiel.",
+  "Best Value vs Low Price:": "Bester Wert vs niedriger Preis:",
+  "In settings, you can toggle between using the last low price or a weighted 24h average.": "In den Einstellungen kannst du zwischen dem letzten Tiefstpreis und einem gewichteten 24h-Durchschnitt waehlen."
 }
