--- a/config/i18n/fr.json5
+++ b/config/i18n/fr.json5
@@ -234,5 +234,68 @@
   "Why are some items hidden in 'Excluded Categories'?": "Pourquoi certains objets sont-ils caches dans 'Categories exclues' ?",
   "Why are weapons hidden by default?": "Pourquoi les armes sont-elles cachees par defaut ?",
   "Why can't I use certain items in the ritual?": "Pourquoi ne puis-je pas utiliser certains objets dans le rituel ?",
-  "Why do some weapons have such high Base Values?": "Pourquoi certaines armes ont-elles des valeurs de base si elevees ?"
+  "Why do some weapons have such high Base Values?": "Pourquoi certaines armes ont-elles des valeurs de base si elevees ?",
+  "1. Set Threshold": "1. Definir le seuil",
+  "2. Select Items": "2. Selectionner les objets",
+  "3. Check Settings": "3. Verifier les parametres",
+  "4. Auto Select": "4. Selection auto",
+  "Select your target value (e.g., 400,000₽ for 6h ritual).": "Selectionnez votre valeur cible (ex. 400 000₽ pour le rituel 6 h).",
+  "Search and add items to the 5 ritual slots.": "Recherchez et ajoutez des objets aux 5 emplacements du rituel.",
+  "Configure excluded categories and price preferences.": "Configurez les categories exclues et les preferences de prix.",
+  "Let the app find the most cost-effective combination.": "Laissez l'application trouver la combinaison la plus rentable.",
+  "★ Key Feature: Pinning": "★ Fonction cle : Epinglage",
+  "Click the Pin icon on an item to force the Auto Select feature to include it in the final calculation. Great for items you already have in your stash!": "Cliquez sur l'icone Epingler d'un objet pour forcer la selection auto a l'inclure dans le calcul final. Ideal pour les objets deja dans votre planque !",
+  "Smart suggestions appear below empty slots with color-coded hints. They guide you toward items that will help you reach your current threshold efficiently.": "Des suggestions intelligentes apparaissent sous les emplacements vides avec des indices colores. Elles vous guident vers des objets qui vous aideront a atteindre votre seuil efficacement.",
+  "Ritual duration determines the quality and type of rewards you receive:": "La duree du rituel determine la qualite et le type de recompenses recues :",
+  "12 Hours:": "12 heures :",
+  "Normal random loot. Triggered by sacrifices under 350,001₽.": "Butin aleatoire normal. Declenche par des sacrifices sous 350 001₽.",
+  "14 Hours:": "14 heures :",
+  "High-value loot. Triggered by sacrifices between 350,001₽ and 399,999₽.": "Butin de grande valeur. Declenche par des sacrifices entre 350 001₽ et 399 999₽.",
+  "6 Hours:": "6 heures :",
+  "Quest & Hideout items. This is the most desirable outcome.": "Objets de quete et de planque. C'est le resultat le plus desire.",
+  "To have a chance at a 6-hour ritual, your total sacrifice must be": "Pour avoir une chance d'un rituel de 6 heures, votre sacrifice total doit etre",
+  "400,000₽ or more": "400 000₽ ou plus",
+  "Note: At 400k+, you have a": "Note : A 400k+, vous avez",
+  "25% chance": "25 % de chance",
+  "for a 6h ritual and a": "pour un rituel de 6 h et",
+  "75% chance": "75 % de chance",
+  "for a 14h ritual. Adding more value beyond 400k does NOT increase this 25% chance.": "pour un rituel de 14 h. Ajouter plus de valeur au-dela de 400k n'augmente PAS cette chance de 25 %.",
+  "The Cultist Circle uses an internal \"base value\" for items, which is different from flea or trader prices.": "Le Cultist Circle utilise une \"valeur de base\" interne pour les objets, differente des prix du marche ou des marchands.",
+  "Base Value = Vendor Sell Price ÷ Vendor's Multiplier": "Valeur de base = Prix de vente marchand ÷ Multiplicateur du marchand",
+  "Example: A Graphics Card sells to Therapist for 124,740₽. Her multiplier is 0.63. Base Value = 124,740 ÷ 0.63 = 198,682₽.": "Exemple : une carte graphique se vend a la Therapeute pour 124 740₽. Son multiplicateur est 0,63. Valeur de base = 124 740 ÷ 0,63 = 198 682₽.",
+  "Weapon base values are tied to their trader sell prices. Rare or high-tier weapons like the": "Les valeurs de base des armes sont liees a leurs prix de vente marchand. Des armes rares ou haut de gamme comme la",
+  "HK G28": "HK G28",
+  "have very high sell values, making them extremely efficient for reaching the 400k threshold.": "ont des valeurs de vente tres elevees, les rendant tres efficaces pour atteindre le seuil de 400k.",
+  "However, many weapon \"mods\" or attachments have low base values, and the calculation for full weapon builds can be uncertain due to durability and the number of attached parts.": "Cependant, de nombreux \"mods\" ou accessoires ont de faibles valeurs de base, et le calcul des armes completes peut etre incertain selon la durabilite et le nombre de pieces attachees.",
+  "In the Settings menu, you can toggle which categories of items you are willing to sacrifice. If a category is unchecked, any items belonging to it will be hidden from the calculator and auto-select feature to prevent unintentional sacrifices of gear you'd rather keep.": "Dans le menu Parametres, vous pouvez choisir les categories d'objets que vous etes pret a sacrifier. Si une categorie est decochee, les objets correspondants seront masques du calculateur et de la selection auto pour eviter des sacrifices non souhaites.",
+  "Some items are hard-coded as": "Certains objets sont codes en dur comme",
+  "Incompatible": "Incompatibles",
+  "(see the Incompatible Items tab).": "(voir l'onglet Objets incompatibles).",
+  "The Weapon category is disabled by default for two main reasons:": "La categorie Armes est desactivee par defaut pour deux raisons principales :",
+  "Base Value Uncertainty:": "Incertitude sur la valeur de base :",
+  "Weapon base values are complex and can vary based on durability and the specific combination of attached parts/mods.": "Les valeurs de base des armes sont complexes et peuvent varier selon la durabilite et la combinaison de pieces attachees.",
+  "You can enable weapons in": "Vous pouvez activer les armes dans",
+  "Settings > Categories": "Parametres > Categories",
+  "if you have spares you're willing to sacrifice.": "si vous avez des surplus que vous etes pret a sacrifier.",
+  "Certain high-value items can be sacrificed but will": "Certains objets de grande valeur peuvent etre sacrifies mais ne seront",
+  "never be returned": "jamais retournes",
+  "as a reward from a 6h ritual. This prevents \"infinite loops\" of extremely rare items.": "comme recompense d'un rituel de 6 h. Cela evite les \"boucles infinies\" d'objets tres rares.",
+  "Note: \"High Value\" in Tarkov is a broad term. It can refer to rare items like a": "Note : \"Grande valeur\" dans Tarkov est un terme large. Il peut designer des objets rares comme un",
+  "LedX": "LedX",
+  "are community-tested weapon combos that use special internal base values to hit the 400k threshold cheaply.": "sont des combinaisons d'armes testees par la communaute qui utilisent des valeurs internes speciales pour atteindre le seuil de 400k a moindre cout.",
+  "You'll find them in the": "Vous les trouverez dans le",
+  "panel on the main calculator page. Click": "panneau sur la page principale du calculateur. Cliquez",
+  "to auto-fill the slots.": "pour remplir automatiquement les emplacements.",
+  "The": "Le",
+  "page is a dedicated view showing all known weapon combos and their expected ritual outcomes.": "la page est une vue dediee montrant toutes les combinaisons d'armes connues et leurs resultats attendus.",
+  "Note: Some recipes may only work once per profile or have specific conditions.": "Note : Certaines recettes peuvent ne fonctionner qu'une seule fois par profil ou avoir des conditions specifiques.",
+  "Exact Thresholds:": "Seuils exacts :",
+  "Aim for just over 400,001₽. Adding more value does NOT increase your 6h ritual chance.": "Visez juste au-dessus de 400 001₽. Ajouter plus de valeur n'augmente PAS votre chance de rituel 6 h.",
+  "Check Your Quests:": "Verifiez vos quetes :",
+  "For best results with the 6h ritual, ensure you have active quests on your character.": "Pour de meilleurs resultats avec le rituel 6 h, assurez-vous d'avoir des quetes actives.",
+  "Stable Prices:": "Prix stables :",
+  "Red pricing": "Prix en rouge",
+  "indicates unstable market data. Always verify these items in-game.": "indique des donnees de marche instables. Verifiez toujours ces objets en jeu.",
+  "Best Value vs Low Price:": "Meilleure valeur vs prix bas :",
+  "In settings, you can toggle between using the last low price or a weighted 24h average.": "Dans les parametres, vous pouvez choisir entre le dernier prix bas ou une moyenne ponderee sur 24 h."
 }
