feat(nav): add language selector to navbar (#19)
* feat: add advanced search syntax with keyboard shortcuts and query parser for base values page

- Add keyboard shortcuts: `/` to focus search, `Escape` to clear, `Shift+Enter` to toggle filters
- Implement query parser supporting range operators (bp>, llp<, avg>=), category filters (cat:), and flags (fav, trader, compat)
- Add collapsible advanced filters section with improved layout and visual hierarchy
- Refactor filtering logic to combine text search with parsed query filters

* refactor: replace Next.js Image with native img tags and add lazy loading attributes

- Replace Next.js Image component with native img tags across all components
- Add `fetchPriority="low"` and `loading="lazy"` attributes to all images
- Remove `priority` and `unoptimized` props from Image components
- Add eslint disable comments for `@next/next/no-img-element` rule
- Fix unused parameter warning in middleware.ts
- Fix whitespace formatting in add-recipe.ts

* feat(nav): add language selector to navbar

* feat(i18n): add translations to UI components

- price-range-filter: Reset, Min, Max, to, aria-labels
- category-filter: Category, All Categories, aria-labels
- virtualized-table: favorites tooltips, copy base price

* feat(i18n): add translations to Help & FAQ page

- Page header and description
- Tab labels (General FAQ, Incompatible Items, 6h Exclusions)
- Section headers (Calculator Guide, Ritual Mechanics, etc.)
- All FAQ question titles
- Search placeholders
- Card titles and descriptions
- Toast messages and tooltips

--- a/config/i18n/pt.json5
+++ b/config/i18n/pt.json5
@@ -187,5 +187,115 @@
   "needed": "necessario",
   "or": "ou",
   "panel at the top of the page for known, community-tested combos.": "painel no topo da pagina para combinacoes conhecidas e testadas pela comunidade.",
-  "to focus": "para focar"
+  "to focus": "para focar",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Adicionar aos favoritos",
+  "All Categories": "Todas as categorias",
+  "Category:": "Categoria:",
+  "Clear category filter": "Limpar filtro de categoria",
+  "Copy base price": "Copiar preco base",
+  "Max": "Max",
+  "Maximum price": "Preco maximo",
+  "Min": "Min",
+  "Minimum price": "Preco minimo",
+  "Remove from favorites": "Remover dos favoritos",
+  "Reset price range": "Redefinir faixa de preco",
+  "to": "ate",
+
+  // Help & FAQ page
+  "6h Exclusions": "Exclusoes de 6h",
+  "Calculator Guide": "Guia do calculador",
+  "Copy link to this section": "Copiar link para esta secao",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Tudo o que voce precisa saber sobre os rituais do Circulo Cultista, valores de itens e mecanicas do calculador.",
+  "General FAQ": "Perguntas frequentes",
+  "How can I optimize my sacrifices?": "Como posso otimizar meus sacrificios?",
+  "How do I use the calculator?": "Como uso o calculador?",
+  "How do ritual durations work?": "Como funcionam as duracoes dos rituais?",
+  "How is 'Base Value' calculated?": "Como o 'Valor Base' e calculado?",
+  "Incompatible Items": "Itens incompativeis",
+  "Item & Category Issues": "Problemas de itens e categorias",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Itens que podem ser sacrificados mas nunca retornados como recompensas de 6h.",
+  "Link copied!": "Link copiado!",
+  "Note:": "Nota:",
+  "Ritual Mechanics": "Mecanicas do ritual",
+  "Search 6h exclusions...": "Pesquisar exclusoes de 6h...",
+  "Search incompatible items...": "Pesquisar itens incompativeis...",
+  "These items are completely incompatible with ritual mechanics.": "Estes itens sao completamente incompativeis com as mecanicas do ritual.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Estes itens ainda podem ser recebidos como recompensas de rituais de 14h, mas nunca do ritual de 6h \"Missao/Esconderijo\".",
+  "Tips & Tricks": "Dicas e truques",
+  "Total Excluded from 6h:": "Total excluido de 6h:",
+  "Total Restricted Items:": "Total de itens restritos:",
+  "What are 'Hot Sacrifices'?": "O que sao 'Sacrificios populares'?",
+  "What are 'Item Hints'?": "O que sao 'Dicas de itens'?",
+  "What are the value thresholds for a 6h ritual?": "Quais sao os limiares de valor para um ritual de 6h?",
+  "What is the Recipes page?": "O que e a pagina de Receitas?",
+  "Why are some items excluded from 6h rewards?": "Por que alguns itens estao excluidos das recompensas de 6h?",
+  "Why are some items hidden in 'Excluded Categories'?": "Por que alguns itens estao ocultos em 'Categorias excluidas'?",
+  "Why are weapons hidden by default?": "Por que as armas estao ocultas por padrao?",
+  "Why can't I use certain items in the ritual?": "Por que nao posso usar certos itens no ritual?",
+  "Why do some weapons have such high Base Values?": "Por que algumas armas tem valores base tao altos?",
+  "1. Set Threshold": "1. Set Threshold",
+  "2. Select Items": "2. Select Items",
+  "3. Check Settings": "3. Check Settings",
+  "4. Auto Select": "4. Auto Select",
+  "Select your target value (e.g., 400,000₽ for 6h ritual).": "Select your target value (e.g., 400,000₽ for 6h ritual).",
+  "Search and add items to the 5 ritual slots.": "Search and add items to the 5 ritual slots.",
+  "Configure excluded categories and price preferences.": "Configure excluded categories and price preferences.",
+  "Let the app find the most cost-effective combination.": "Let the app find the most cost-effective combination.",
+  "★ Key Feature: Pinning": "★ Key Feature: Pinning",
+  "Click the Pin icon on an item to force the Auto Select feature to include it in the final calculation. Great for items you already have in your stash!": "Click the Pin icon on an item to force the Auto Select feature to include it in the final calculation. Great for items you already have in your stash!",
+  "Smart suggestions appear below empty slots with color-coded hints. They guide you toward items that will help you reach your current threshold efficiently.": "Smart suggestions appear below empty slots with color-coded hints. They guide you toward items that will help you reach your current threshold efficiently.",
+  "Ritual duration determines the quality and type of rewards you receive:": "Ritual duration determines the quality and type of rewards you receive:",
+  "12 Hours:": "12 Hours:",
+  "Normal random loot. Triggered by sacrifices under 350,001₽.": "Normal random loot. Triggered by sacrifices under 350,001₽.",
+  "14 Hours:": "14 Hours:",
+  "High-value loot. Triggered by sacrifices between 350,001₽ and 399,999₽.": "High-value loot. Triggered by sacrifices between 350,001₽ and 399,999₽.",
+  "6 Hours:": "6 Hours:",
+  "Quest & Hideout items. This is the most desirable outcome.": "Quest & Hideout items. This is the most desirable outcome.",
+  "To have a chance at a 6-hour ritual, your total sacrifice must be": "To have a chance at a 6-hour ritual, your total sacrifice must be",
+  "400,000₽ or more": "400,000₽ or more",
+  "Note: At 400k+, you have a": "Note: At 400k+, you have a",
+  "25% chance": "25% chance",
+  "for a 6h ritual and a": "for a 6h ritual and a",
+  "75% chance": "75% chance",
+  "for a 14h ritual. Adding more value beyond 400k does NOT increase this 25% chance.": "for a 14h ritual. Adding more value beyond 400k does NOT increase this 25% chance.",
+  "The Cultist Circle uses an internal \"base value\" for items, which is different from flea or trader prices.": "The Cultist Circle uses an internal \"base value\" for items, which is different from flea or trader prices.",
+  "Base Value = Vendor Sell Price ÷ Vendor's Multiplier": "Base Value = Vendor Sell Price ÷ Vendor's Multiplier",
+  "Example: A Graphics Card sells to Therapist for 124,740₽. Her multiplier is 0.63. Base Value = 124,740 ÷ 0.63 = 198,682₽.": "Example: A Graphics Card sells to Therapist for 124,740₽. Her multiplier is 0.63. Base Value = 124,740 ÷ 0.63 = 198,682₽.",
+  "Weapon base values are tied to their trader sell prices. Rare or high-tier weapons like the": "Weapon base values are tied to their trader sell prices. Rare or high-tier weapons like the",
+  "HK G28": "HK G28",
+  "have very high sell values, making them extremely efficient for reaching the 400k threshold.": "have very high sell values, making them extremely efficient for reaching the 400k threshold.",
+  "However, many weapon \"mods\" or attachments have low base values, and the calculation for full weapon builds can be uncertain due to durability and the number of attached parts.": "However, many weapon \"mods\" or attachments have low base values, and the calculation for full weapon builds can be uncertain due to durability and the number of attached parts.",
+  "In the Settings menu, you can toggle which categories of items you are willing to sacrifice. If a category is unchecked, any items belonging to it will be hidden from the calculator and auto-select feature to prevent unintentional sacrifices of gear you'd rather keep.": "In the Settings menu, you can toggle which categories of items you are willing to sacrifice. If a category is unchecked, any items belonging to it will be hidden from the calculator and auto-select feature to prevent unintentional sacrifices of gear you'd rather keep.",
+  "Some items are hard-coded as": "Some items are hard-coded as",
+  "Incompatible": "Incompatible",
+  "(see the Incompatible Items tab).": "(see the Incompatible Items tab).",
+  "The Weapon category is disabled by default for two main reasons:": "The Weapon category is disabled by default for two main reasons:",
+  "Base Value Uncertainty:": "Base Value Uncertainty:",
+  "Weapon base values are complex and can vary based on durability and the specific combination of attached parts/mods.": "Weapon base values are complex and can vary based on durability and the specific combination of attached parts/mods.",
+  "You can enable weapons in": "You can enable weapons in",
+  "Settings > Categories": "Settings > Categories",
+  "if you have spares you're willing to sacrifice.": "if you have spares you're willing to sacrifice.",
+  "Certain high-value items can be sacrificed but will": "Certain high-value items can be sacrificed but will",
+  "never be returned": "never be returned",
+  "as a reward from a 6h ritual. This prevents \"infinite loops\" of extremely rare items.": "as a reward from a 6h ritual. This prevents \"infinite loops\" of extremely rare items.",
+  "Note: \"High Value\" in Tarkov is a broad term. It can refer to rare items like a": "Note: \"High Value\" in Tarkov is a broad term. It can refer to rare items like a",
+  "LedX": "LedX",
+  "are community-tested weapon combos that use special internal base values to hit the 400k threshold cheaply.": "are community-tested weapon combos that use special internal base values to hit the 400k threshold cheaply.",
+  "You'll find them in the": "You'll find them in the",
+  "panel on the main calculator page. Click": "panel on the main calculator page. Click",
+  "to auto-fill the slots.": "to auto-fill the slots.",
+  "The": "The",
+  "page is a dedicated view showing all known weapon combos and their expected ritual outcomes.": "page is a dedicated view showing all known weapon combos and their expected ritual outcomes.",
+  "Note: Some recipes may only work once per profile or have specific conditions.": "Note: Some recipes may only work once per profile or have specific conditions.",
+  "Exact Thresholds:": "Exact Thresholds:",
+  "Aim for just over 400,001₽. Adding more value does NOT increase your 6h ritual chance.": "Aim for just over 400,001₽. Adding more value does NOT increase your 6h ritual chance.",
+  "Check Your Quests:": "Check Your Quests:",
+  "For best results with the 6h ritual, ensure you have active quests on your character.": "For best results with the 6h ritual, ensure you have active quests on your character.",
+  "Stable Prices:": "Stable Prices:",
+  "Red pricing": "Red pricing",
+  "indicates unstable market data. Always verify these items in-game.": "indicates unstable market data. Always verify these items in-game.",
+  "Best Value vs Low Price:": "Best Value vs Low Price:",
+  "In settings, you can toggle between using the last low price or a weighted 24h average.": "In settings, you can toggle between using the last low price or a weighted 24h average."
 }
