--- a/config/i18n/cs.json5
+++ b/config/i18n/cs.json5
@@ -187,5 +187,115 @@
   "needed": "potrebne",
   "or": "nebo",
   "panel at the top of the page for known, community-tested combos.": "panel nahore na strance s kombinacemi testovanymi komunitou.",
-  "to focus": "pro fokus"
+  "to focus": "pro fokus",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Pridat do oblibenych",
+  "All Categories": "Vsechny kategorie",
+  "Category:": "Kategorie:",
+  "Clear category filter": "Vymazat filtr kategorie",
+  "Copy base price": "Kopirovat zakladni cenu",
+  "Max": "Max",
+  "Maximum price": "Maximalni cena",
+  "Min": "Min",
+  "Minimum price": "Minimalni cena",
+  "Remove from favorites": "Odebrat z oblibenych",
+  "Reset price range": "Resetovat cenove rozpeti",
+  "to": "az",
+
+  // Help & FAQ page
+  "6h Exclusions": "Vylouceni 6h",
+  "Calculator Guide": "Pruvodce kalkulackou",
+  "Copy link to this section": "Kopirovat odkaz na tuto sekci",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Vse, co potrebujete vedet o ritualech Kultistickeho kruhu, hodnotach predmetu a mechanice kalkulacky.",
+  "General FAQ": "Obecne FAQ",
+  "How can I optimize my sacrifices?": "Jak mohu optimalizovat sve obeti?",
+  "How do I use the calculator?": "Jak pouzivat kalkulacku?",
+  "How do ritual durations work?": "Jak funguji doby trvani ritualu?",
+  "How is 'Base Value' calculated?": "Jak se pocita 'Zakladni hodnota'?",
+  "Incompatible Items": "Nekompatibilni predmety",
+  "Item & Category Issues": "Problemy s predmety a kategoriemi",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Predmety, ktere lze obetovat, ale nikdy nebudou vraceny jako odmeny 6h.",
+  "Link copied!": "Odkaz zkopirovan!",
+  "Note:": "Poznamka:",
+  "Ritual Mechanics": "Mechanika ritualu",
+  "Search 6h exclusions...": "Hledat vylouceni 6h...",
+  "Search incompatible items...": "Hledat nekompatibilni predmety...",
+  "These items are completely incompatible with ritual mechanics.": "Tyto predmety jsou zcela nekompatibilni s mechanikou ritualu.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Tyto predmety lze stale ziskat jako odmeny z 14h ritualu, ale nikdy z 6h ritualu \"Ukol/Ukryt\".",
+  "Tips & Tricks": "Tipy a triky",
+  "Total Excluded from 6h:": "Celkem vylouceno z 6h:",
+  "Total Restricted Items:": "Celkem omezenych predmetu:",
+  "What are 'Hot Sacrifices'?": "Co jsou 'Popularni obeti'?",
+  "What are 'Item Hints'?": "Co jsou 'Napovedy predmetu'?",
+  "What are the value thresholds for a 6h ritual?": "Jake jsou hodnotove prahy pro 6h ritual?",
+  "What is the Recipes page?": "Co je stranka Receptu?",
+  "Why are some items excluded from 6h rewards?": "Proc jsou nektere predmety vylouceny z odmen 6h?",
+  "Why are some items hidden in 'Excluded Categories'?": "Proc jsou nektere predmety skryty ve 'Vyloucene kategorie'?",
+  "Why are weapons hidden by default?": "Proc jsou zbrane ve vychozim nastaveni skryty?",
+  "Why can't I use certain items in the ritual?": "Proc nemohu pouzit urcite predmety v ritualu?",
+  "Why do some weapons have such high Base Values?": "Proc maji nektere zbrane tak vysoke zakladni hodnoty?",
+  "1. Set Threshold": "1. Set Threshold",
+  "2. Select Items": "2. Select Items",
+  "3. Check Settings": "3. Check Settings",
+  "4. Auto Select": "4. Auto Select",
+  "Select your target value (e.g., 400,000₽ for 6h ritual).": "Select your target value (e.g., 400,000₽ for 6h ritual).",
+  "Search and add items to the 5 ritual slots.": "Search and add items to the 5 ritual slots.",
+  "Configure excluded categories and price preferences.": "Configure excluded categories and price preferences.",
+  "Let the app find the most cost-effective combination.": "Let the app find the most cost-effective combination.",
+  "★ Key Feature: Pinning": "★ Key Feature: Pinning",
+  "Click the Pin icon on an item to force the Auto Select feature to include it in the final calculation. Great for items you already have in your stash!": "Click the Pin icon on an item to force the Auto Select feature to include it in the final calculation. Great for items you already have in your stash!",
+  "Smart suggestions appear below empty slots with color-coded hints. They guide you toward items that will help you reach your current threshold efficiently.": "Smart suggestions appear below empty slots with color-coded hints. They guide you toward items that will help you reach your current threshold efficiently.",
+  "Ritual duration determines the quality and type of rewards you receive:": "Ritual duration determines the quality and type of rewards you receive:",
+  "12 Hours:": "12 Hours:",
+  "Normal random loot. Triggered by sacrifices under 350,001₽.": "Normal random loot. Triggered by sacrifices under 350,001₽.",
+  "14 Hours:": "14 Hours:",
+  "High-value loot. Triggered by sacrifices between 350,001₽ and 399,999₽.": "High-value loot. Triggered by sacrifices between 350,001₽ and 399,999₽.",
+  "6 Hours:": "6 Hours:",
+  "Quest & Hideout items. This is the most desirable outcome.": "Quest & Hideout items. This is the most desirable outcome.",
+  "To have a chance at a 6-hour ritual, your total sacrifice must be": "To have a chance at a 6-hour ritual, your total sacrifice must be",
+  "400,000₽ or more": "400,000₽ or more",
+  "Note: At 400k+, you have a": "Note: At 400k+, you have a",
+  "25% chance": "25% chance",
+  "for a 6h ritual and a": "for a 6h ritual and a",
+  "75% chance": "75% chance",
+  "for a 14h ritual. Adding more value beyond 400k does NOT increase this 25% chance.": "for a 14h ritual. Adding more value beyond 400k does NOT increase this 25% chance.",
+  "The Cultist Circle uses an internal \"base value\" for items, which is different from flea or trader prices.": "The Cultist Circle uses an internal \"base value\" for items, which is different from flea or trader prices.",
+  "Base Value = Vendor Sell Price ÷ Vendor's Multiplier": "Base Value = Vendor Sell Price ÷ Vendor's Multiplier",
+  "Example: A Graphics Card sells to Therapist for 124,740₽. Her multiplier is 0.63. Base Value = 124,740 ÷ 0.63 = 198,682₽.": "Example: A Graphics Card sells to Therapist for 124,740₽. Her multiplier is 0.63. Base Value = 124,740 ÷ 0.63 = 198,682₽.",
+  "Weapon base values are tied to their trader sell prices. Rare or high-tier weapons like the": "Weapon base values are tied to their trader sell prices. Rare or high-tier weapons like the",
+  "HK G28": "HK G28",
+  "have very high sell values, making them extremely efficient for reaching the 400k threshold.": "have very high sell values, making them extremely efficient for reaching the 400k threshold.",
+  "However, many weapon \"mods\" or attachments have low base values, and the calculation for full weapon builds can be uncertain due to durability and the number of attached parts.": "However, many weapon \"mods\" or attachments have low base values, and the calculation for full weapon builds can be uncertain due to durability and the number of attached parts.",
+  "In the Settings menu, you can toggle which categories of items you are willing to sacrifice. If a category is unchecked, any items belonging to it will be hidden from the calculator and auto-select feature to prevent unintentional sacrifices of gear you'd rather keep.": "In the Settings menu, you can toggle which categories of items you are willing to sacrifice. If a category is unchecked, any items belonging to it will be hidden from the calculator and auto-select feature to prevent unintentional sacrifices of gear you'd rather keep.",
+  "Some items are hard-coded as": "Some items are hard-coded as",
+  "Incompatible": "Incompatible",
+  "(see the Incompatible Items tab).": "(see the Incompatible Items tab).",
+  "The Weapon category is disabled by default for two main reasons:": "The Weapon category is disabled by default for two main reasons:",
+  "Base Value Uncertainty:": "Base Value Uncertainty:",
+  "Weapon base values are complex and can vary based on durability and the specific combination of attached parts/mods.": "Weapon base values are complex and can vary based on durability and the specific combination of attached parts/mods.",
+  "You can enable weapons in": "You can enable weapons in",
+  "Settings > Categories": "Settings > Categories",
+  "if you have spares you're willing to sacrifice.": "if you have spares you're willing to sacrifice.",
+  "Certain high-value items can be sacrificed but will": "Certain high-value items can be sacrificed but will",
+  "never be returned": "never be returned",
+  "as a reward from a 6h ritual. This prevents \"infinite loops\" of extremely rare items.": "as a reward from a 6h ritual. This prevents \"infinite loops\" of extremely rare items.",
+  "Note: \"High Value\" in Tarkov is a broad term. It can refer to rare items like a": "Note: \"High Value\" in Tarkov is a broad term. It can refer to rare items like a",
+  "LedX": "LedX",
+  "are community-tested weapon combos that use special internal base values to hit the 400k threshold cheaply.": "are community-tested weapon combos that use special internal base values to hit the 400k threshold cheaply.",
+  "You'll find them in the": "You'll find them in the",
+  "panel on the main calculator page. Click": "panel on the main calculator page. Click",
+  "to auto-fill the slots.": "to auto-fill the slots.",
+  "The": "The",
+  "page is a dedicated view showing all known weapon combos and their expected ritual outcomes.": "page is a dedicated view showing all known weapon combos and their expected ritual outcomes.",
+  "Note: Some recipes may only work once per profile or have specific conditions.": "Note: Some recipes may only work once per profile or have specific conditions.",
+  "Exact Thresholds:": "Exact Thresholds:",
+  "Aim for just over 400,001₽. Adding more value does NOT increase your 6h ritual chance.": "Aim for just over 400,001₽. Adding more value does NOT increase your 6h ritual chance.",
+  "Check Your Quests:": "Check Your Quests:",
+  "For best results with the 6h ritual, ensure you have active quests on your character.": "For best results with the 6h ritual, ensure you have active quests on your character.",
+  "Stable Prices:": "Stable Prices:",
+  "Red pricing": "Red pricing",
+  "indicates unstable market data. Always verify these items in-game.": "indicates unstable market data. Always verify these items in-game.",
+  "Best Value vs Low Price:": "Best Value vs Low Price:",
+  "In settings, you can toggle between using the last low price or a weighted 24h average.": "In settings, you can toggle between using the last low price or a weighted 24h average."
 }
